Use the defaults module to prime the options.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "event-stream": "~3.0.20",
     "coffee-script": "~1.6.3",
-    "gulp-util": "~2.2.1"
+    "gulp-util": "~2.2.1",
+    "defaults": "~1.0.0"
   },
   "devDependencies": {
     "mocha": "*",
