--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "event-stream": "^3.0.20",
     "coffee-script": "1.7.0",
-    "gulp-util": "^2.2.1"
+    "gulp-util": "^2.2.1",
+    "merge": "~1.1.3"
   },
   "devDependencies": {
     "mocha": "*",
